--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -3,5 +3,6 @@
     Number of rooms : 
     <div [innerText]="numberOfRooms"></div>
 </div>
+<h1>Lan</h1>
 <button (click)="toggle()">Toggle</button>
 
